--- a/index.css
+++ b/index.css
@@ -1,3 +1,7 @@
+* {
+  margin: 0px;
+  padding: 0px;
+}
 .login{
 width: 400px;
 height: 400px;
@@ -8,7 +12,6 @@ border: black 2px solid;
 border-radius: 11px;
 padding-top: 150px;
 margin-left: 220px;
-
 font-size: 40px;
 }
 
@@ -23,13 +26,15 @@ width: 250px;
 
 .img1{
 margin-top:300px;
-margin-left: 170
+margin-left: 200px;
 }
 
 #username1{
 width: 250px;
+height: 30px;
 }
 
 #password1{
 width: 250px;
+height: 30px
 }
