--- a/assets/css/server.css
+++ b/assets/css/server.css
@@ -59,11 +59,11 @@ section::before
 {
     content: '';
     position: absolute;
-    width: 240px;
-    height: 240px;
+    width: 100px;
+    height: 100px;
     background: linear-gradient(#f3f5f5, #9c27b0);
     border-radius: 50%;
-    transform: translate(-200px, -250px);
+    transform: translate(-150px, -170px);
 }
 section.dark::before{
     background: linear-gradient(#ffc127, #e91e63);
@@ -76,17 +76,17 @@ section::after
 {
     content: '';
     position: absolute;
-    width: 250px;
-    height: 250px;
+    width: 100px;
+    height: 100px;
     background: linear-gradient(#ff2871, rgba(255,40,113,0.2));
     border-radius: 50%;
-    transform: translate(200px, 250px);
+    transform: translate(150px, 170px);
 }
 .box
 {
     position: relative;
-    width: 400px;
-    height: 500px;
+    width: 300px;
+    height: 350px;
     background: rgba(255, 255, 255, 0.1);
     z-index: 1;
     box-shadow: 0 25px 45px rgba(0, 0, 0, 0.25);
@@ -95,23 +95,15 @@ section::after
     border-bottom: 1px solid rgba(255, 255, 255, 0.1);
     backdrop-filter: blur(25px);
     border-radius: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.content
-{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
 }
 .box h3
 {
+    margin: 0 0 0 70px;
     color: #9d2cb1;
     font-weight: 500;
-    font-size: 3em;
+    font-size: 2.5em;
     letter-spacing: 1px;
+    
 }
 section.dark .box h3
 {
@@ -120,8 +112,21 @@ section.dark .box h3
 .percent
 {
     color: #fe3177;
-    font-size: 2em;
-    font-weight: 700;
+    text-align: center;
+    font-size: 1em;
+    font-weight: 500;
+}
+.percent2
+{
+    color: #fe3177;
+    text-align: left;
+    font-size: 1em;
+    font-weight: 500;
+}
+.percent .linkTail
+{
+    font-size: 0.8em;
+    font-weight: 500;
 }
 select.dark .percent
 {
